...
                              Theme.of(context).colorScheme.primary,
                        );
                      },
                    ),
                    const SizedBox(height: 16),
                    Text(
                      'What does this mean?',
                      style: Theme.of(context).textTheme.titleMedium,
                      textAlign: TextAlign.center,
                    ),
                    const SizedBox(height: 16),
                    Consumer(
                      builder: (context, ref, _) {
...
