...
    }
  }

  String _getLanguageDisplayName(String language) {
    switch (language) {
      case 'latin':
        return 'Latin';
      case 'spanish':
        return 'Spanish';
      default:
        return language.substring(0, 1).toUpperCase() + language.substring(1);
    }
  }
}

